--- a/app/views/challenges/_american.html.erb
+++ b/app/views/challenges/_american.html.erb
@@ -4,7 +4,7 @@
 		<div class="row" id="american-title">
 			<div class="span2" id="american-gauche">
 				<div class="row" id="equipe">
-					EQUIPE 1
+					Equipe 1
 				</div>
 				<div class="row">
 					<div class="image1">
@@ -105,6 +105,13 @@
 					<div class="row" id="american-milieu-1">
 						<div class='title'><%= link_to @challenge.title, @challenge%></div>
 					</div>
+					
+					<div class="row" id="american-milieu-4">
+						<% @challenge.tag_list.each do |l|%>
+							<li><%=l%></li>
+						<% end%>
+					</div>
+					
 					<div class="row" id="american-milieu-2">
 						<div class='content'><%= @challenge.context%></div>
 					</div>
@@ -112,17 +119,36 @@
 					<div class="row" id="american-milieu-3">
 
 							<% if @challenge.position_taken.include?(1) && @challenge.position_taken.include?(3) %>
-							<a><%= link_to "POUR EQUIPE 1", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a><span class="rapport-gauche"><%= @challenge.rapport%>%</span>
+								<% if current_user  && @challenge.has_evaluation?(:vote_challenges, current_user) %>
+									<span class="rapport-gauche"><%= @challenge.rapport%>%</span>
+									<% if @challenge.valeur_vote(current_user) == 1.0 %>
+										<a><%= link_to "Pour l'équipe 1", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first1"%></a>
+									<% else %>
+										<a><%= link_to "Pour l'équipe 1", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a>
+									<% end %>
+								<% else%>
+									<div class="pour-truc"><a><%= link_to "Pour l'équipe 1", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a></div>
+								<% end %>
 							<% else %>
-								<a class="pour-first" href="#">POUR EQUIPE 1</a>	
+								<a class="pour-first" href="#">Pour l'équipe 1</a>	
 							<%end%>
 
 
+
 							<% if @challenge.position_taken.include?(2) && @challenge.position_taken.include?(4) %>
-									<span class="rapport-droite"><%= @challenge.rapport_inverse %>%</span><a><%= link_to "POUR EQUIPE 2", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%>
-							<% else %>			
-								<a class="pour-second" href="#">POUR EQUIPE 2</a>	
-							<%end%>									
+								<% if current_user  && @challenge.has_evaluation?(:vote_challenges, current_user) %>
+										<span class="rapport-droite"><%= @challenge.rapport_inverse %>%</span>
+									<% if @challenge.valeur_vote(current_user) == -1.0 %>
+										<a><%= link_to "Pour l'équipe 2", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second2"%></a>
+									<% else %>
+										<a><%= link_to "Pour l'équipe 2", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%></a>
+									<% end %>
+								<% else%>
+									<div class="pour-truc"><a><%= link_to "Pour l'équipe 2", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%></a></div>
+								<% end %>
+							<% else %>
+								<a class="pour-second" href="#">Pour l'équipe 2</a>	
+							<%end%>							
 					</div>
 
 					<div class="row" id="american-milieu-4">
@@ -146,7 +172,7 @@
 			</div>
 			<div class="span2" id="american-droite">
 				<div class="row" id="equipe">
-					EQUIPE 2
+					Equipe 2
 				</div>
 				<div class="row">
 					<div class="image1">
