--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -55,29 +55,51 @@
 				<div class="row" id="ld-milieu-1">
 					<div class='title'><%= link_to @challenge.title, @challenge%></div>
 				</div>
+				
+				<div class="row" id="ld-milieu-4">
+					<% @challenge.tag_list.each do |l|%>
+						<li><%=l%></li>
+					<% end%>
+				</div>
+
 				<div class="row" id="ld-milieu-2">
 					<div class='content'><%= @challenge.context%></div>
 				</div>
-						
+	
 				<div class="row" id="ld-milieu-3">
 						
 						<% if @challenge.position_taken.include?(1) %>
-						<a><%= link_to "POUR #{@challenge.prime_minister.fitting_name}", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a><span class="rapport-gauche"><%= @challenge.rapport%>%</span>
+							<% if current_user  && @challenge.has_evaluation?(:vote_challenges, current_user) %>
+								<span class="rapport-gauche"><%= @challenge.rapport%>%</span>
+								<% if @challenge.valeur_vote(current_user) == 1.0 %>
+									<a><%= link_to "#{@challenge.prime_minister.fitting_name}", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first1"%></a>
+								<% else %>
+									<a><%= link_to "#{@challenge.prime_minister.fitting_name}", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a>
+								<% end %>
+							<% else%>
+								<div class="pour-truc"><a><%= link_to "Pour #{@challenge.prime_minister.fitting_name}", vote_challenge_challenge_path(@challenge, type: "up"), class: "pour-first"%></a></div>
+							<% end %>
 						<% else %>
 							<a class="pour-first" href="#">POUR LA GAUCHE</a>	
 						<%end%>
 									
 									
 						<% if @challenge.position_taken.include?(2) %>
-								<span class="rapport-droite"><%= @challenge.rapport_inverse %>%</span><a><%= link_to "POUR #{@challenge.first_opponent.fitting_name}", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%>
-						<% else %>			
+							<% if current_user  && @challenge.has_evaluation?(:vote_challenges, current_user) %>
+									<span class="rapport-droite"><%= @challenge.rapport_inverse %>%</span>
+								<% if @challenge.valeur_vote(current_user) == -1.0 %>
+									<a><%= link_to "#{@challenge.first_opponent.fitting_name}", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second2"%></a>
+								<% else %>
+									<a><%= link_to "#{@challenge.first_opponent.fitting_name}", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%></a>
+								<% end %>
+							<% else%>
+								<div class="pour-truc"><a><%= link_to "Pour #{@challenge.first_opponent.fitting_name}", vote_challenge_challenge_path(@challenge, type: "down"), class: "pour-second"%></a></div>
+							<% end %>
+						<% else %>
 							<a class="pour-second" href="#">POUR LA DROITE</a>	
-						<%end%>									
+						<%end%>								
 				</div>
 				
-				<div class="row" id="ld-milieu-4">
-					<div class='blank'></div>
-				</div>
 				<div class="row" id="ld-milieu-5">
 					<div class="stat1">
 						<%= @challenge.count_for+@challenge.count_against%>
