--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -10,25 +10,31 @@
 						
 					    <div class="image1">	
 							<%= image_tag("ouvert-image.png", alt: "Moutoners", class: "image")%>							
+						
 							<div id="stats2">								
-							    <div class="row" id="resultats">
-									<span class="resultats-oui">OUI</span>
-									<span class="resultats-oui1">
-										<% if @debate.evaluations.any?%>
-				<%=100*@debate.count_for / (@debate.count_neutral + @debate.count_for + @debate.count_against)%>%
-										<%else%> 0%
-										<%end%>
-				</span>
-									<span class="resultats-non1">
-			   						<% if @debate.evaluations.any?%>
-			   <%=100*@debate.count_against / (@debate.count_neutral + @debate.count_for + @debate.count_against)%>%
-			   						<%else%> 0%
-									<%end%>
-				</span>
-									<span class="resultats-non">NON</span>									
-								</div>								
-								<p class='barre'><%= render "shared/voting_bar", rapport: @debate.rapport%></p>
-						    </div>
+
+								<% if @debate.evaluations.any?%>
+								<div class="reslutats-oui">
+									<div class="oui1">OUI</div>
+									<div class="oui3">|</div>
+									<div class="oui2"><%=100*@debate.count_for / (@debate.count_neutral + @debate.count_for + @debate.count_against)%>%</div>
+								</div>
+								
+								<div class="reslutats-suisse">
+									<div class="suisse1">I</div>
+									<div class="suisse3">|</div>
+									<div class="suisse2"><%=100*@debate.count_neutral / (@debate.count_neutral + @debate.count_for + @debate.count_against)%>%</div>
+								</div>
+
+
+								<div class="reslutats-non">
+									<div class="non1">NON</div>
+									<div class="non3">|</div>
+									<div class="non2"><%=100*@debate.count_against / (@debate.count_neutral + @debate.count_for + @debate.count_against)%>%</div>
+								</div>
+								<%end%>
+									
+						     </div>
 						</div>
 					</div>
 					
@@ -36,16 +42,23 @@
 						<div class="row" id="title2">
 							<%= link_to @debate.title, @debate, class: "title3"%>
 						</div>
+						<div class="row" id="tags_list_doulin">
+							<% @debate.tag_list.each do |l|%>
+								<li><%=l%></li>
+							<% end%>
+						</div>
 						<div class="row" id="content">
 							<div class="content"><%= @debate.content%></div>
 						</div>
 						<div class="row" id="vote">
 							<span class="vote2">VOTEZ</span>
-				 			<%= link_to image_tag("vote-oui.png", class: "oui"), vote_debate_path(@debate, type: "up"), method: "post", :class => "oui" %>
+				 			<li class="oui-oui"><%= link_to "OUI", vote_debate_path(@debate, type: "up"), method: "post", :class => "oui" %>
+							</li>
 
-							<%= link_to image_tag("vote-suisse.png", class: "suisse"), vote_debate_path(@debate, type: "neutral"), method: "post", class: "suisse" %>
+							<li class="suisse-suisse"><%= link_to "I", vote_debate_path(@debate, type: "neutral"), method: "post", class: "suisse" %></li>
 
-							<%= link_to image_tag("vote-non.png", class: "non"), vote_debate_path(@debate, type: "down"), method: "post", class: "non"%>
+							<li class="non-non"><%= link_to "NON", vote_debate_path(@debate, type: "down"), method: "post", :class => "non" %></li>
+
 						</div>
 						
 						<div class="row" id="stats">
