--- a/app/views/shared/_argument_badge.html.erb
+++ b/app/views/shared/_argument_badge.html.erb
@@ -3,7 +3,7 @@
 				<% if current_user && current_user == argument.user %>
 					<div class="modifs">
 						<div class='texte'><%= link_to "Modifier", edit_argument_path(argument), class: "texte" %></div>
-						<div class= 'texte2'><%= link_to "Effacer", destroy_argument_path(argument), class: "texte2" %></div>
+						<div class= 'texte2'><%= link_to "Effacer", argument_path(argument), :method => :delete, class: "texte2" %></div>
 					</div>
 				<% elsif current_user.try(:admin?)%>
 					<div class="modifs">
