--- a/app/views/static_pages/list.html.erb
+++ b/app/views/static_pages/list.html.erb
@@ -1,11 +1,16 @@
-<div class="container">
-				<div class="row">
-					<div class="span2">
+<div class="container" id="index-doulins">
+	
+	<div class="row" id="intro-doulin">
+		<div class="texte">Un fil d'actualité personnalisé</div>
+	</div>
+	
+				<div class="row" id= "for-badges">
+					<div class="span3">
 						<%= render "shared/menu_cat"%>
 					</div>
 	
-					<div class="span8" id="for-badges">
-						<%= render "shared/index", :object => @lists %>
+					<div class="span8" id="list">
+						<%= render "shared/index", :object => @debates %>
 					</div>
 				</div>
 </div>
