--- a/app/views/doulins/show_bis.html.erb
+++ b/app/views/doulins/show_bis.html.erb
@@ -1,564 +1,34 @@
-#fc{
-	#fc-title{
-		width: 760px;
-		min-height: 460px;
-		background-color:#C9C9C9;
-		margin: 30px 0px 30px 150px;
+ $(".invitation-fermer").hide()
+ $(".invitation-fermer1").hide()
+ $(".invitation-fermer-fc").hide()
+ $(".invitation-fermer1-fc").hide()
+ $(".invitation-fermer3-fc").hide()
+ $(".invitation-fermer4-fc").hide()
+
+
+
+ $("#invitation3-fc").click ->
+	    $(this).parent().hide().siblings(".invitation-fermer3-fc").show()
+
+ $("#fermer-invitation3-fc").click ->
+	    $(this).parent().parent().hide().siblings(".first_user").show()
+
+ $("#invitation4-fc").click ->
+	    $(this).parent().hide().siblings(".invitation-fermer4-fc").show()
+
+ $("#fermer-invitation4-fc").click ->
+	    $(this).parent().parent().hide().siblings(".second_user").show()
+
+
+$("#invitation-fc").click ->
+	    $(this).parent().hide().siblings(".invitation-fermer-fc").show()
+
+ $("#fermer-invitation-fc").click ->
+	    $(this).parent().parent().hide().siblings(".first_user").show()
 	
-		
-		#fc-gauche{
-			margin-left: 35px;
-			margin-bottom:20px;
-			width:140px;
+ $("#invitation1-fc").click ->
+	    $(this).parent().hide().siblings(".invitation-fermer1-fc").show()
 
-			.image1{
-			width: 140px;
-			img { width: 140px; height:150px;}
-			border-bottom: 1px solid white;
-				
-				.image2{
-					margin-bottom:10px;
-				}
-			}
-			
-			.invitation-fermer3-fc{
-				.texte{
-				padding-top: 5px;
-				font-family: "gotham";
-				font-size: 13px;
-				text-align: center;
-				}
-				
-				.select{
-				background-color:#C9C9C9;
-				}
-				
-				#fermer-invitation-fc{
-				padding:5px;
-				color: #808080;
-				background-color: black;
-				font-family: "bebasneue-webfont";
-				font-size: 16px;
-				margin-left: 100px;
-				margin-top: -38px;
-				cursor: pointer;
-				}
-				
-				#fermer-invitation3-fc{
-				padding:5px;
-				color: #808080;
-				background-color: black;
-				font-family: "bebasneue-webfont";
-				font-size: 16px;
-				margin-left: 100px;
-				margin-top: -38px;
-				cursor: pointer;
-				}
-				
-				.act{
-				background-color:#808080;
-				color: black;
-				font-family: "bebasneue-webfont";
-				font-size: 16px;
-				margin-left: 10px;
-				}
-			}
-
-			.invitation-fermer-fc{
-				.texte{
-				padding-top: 5px;
-				font-family: "gotham";
-				font-size: 13px;
-				text-align: center;
-				}
-				
-				.select{
-				background-color:#C9C9C9;
-				}
-				
-				#fermer-invitation-fc{
-				padding:5px;
-				color: #808080;
-				background-color: black;
-				font-family: "bebasneue-webfont";
-				font-size: 16px;
-				margin-left: 100px;
-				margin-top: -38px;
-				cursor: pointer;
-				}
-				
-				#fermer-invitation3-fc{
-				padding:5px;
-				color: #808080;
-				background-color: black;
-				font-family: "bebasneue-webfont";
-				font-size: 16px;
-				margin-left: 100px;
-				margin-top: -38px;
-				cursor: pointer;
-				}
-				
-				.act{
-				background-color:#808080;
-				color: black;
-				font-family: "bebasneue-webfont";
-				font-size: 16px;
-				margin-left: 10px;
-				}
-			}
-			
-			
-			.first_user{
-			padding-top: 5px;
-			font-family: "gotham";
-			font-size: 16px;
-			text-align: center;
-			width: 140px;
-			border-bottom: 5px solid white;
-			margin-bottom:15px;
-			
-				.texte{
-				margin-bottom:10px;
-				}
-				
-				#invitation-fc{
-				cursor: pointer;
-				}
-				#invitation3-fc{
-				cursor: pointer;
-				}
-			}
-			
-			.first_grade{
-				margin-top: 10px;
-				width: 140px;
-				height:30px;
-				background-color: #808080;
-				font-family: "bebasneeue-webfont";
-				font-size: 24px;
-				color: white;
-				
-					.texte{
-					text-align: center;
-					padding-top:5px;
-					}
-			}
-		}
-		
-		#fc-droite{
-			margin-left: 43px;
-			width: 140px;
-			
-			.image1{
-			width: 140px;
-			img { width: 140px; height:150px;}
-			border-bottom: 1px solid white;
-				
-				.image2{
-					margin-bottom:10px;
-				}
-			}
-			
-			.second_user{
-			padding-top: 5px;
-			font-family: "gotham";
-			font-size: 16px;
-			text-align: center;
-			width: 140px;
-			border-bottom: 5px solid white;
-			margin-bottom:15px;
-				
-				.texte{
-				margin-bottom:10px;
-				}
-				
-				#invitation1-fc{
-				cursor: pointer;
-				}
-
-				#invitation4-fc{
-				cursor: pointer;
-				}
-			}
-			
-			.invitation-fermer1-fc{
-				.texte{
-				padding-top: 5px;
-				font-family: "gotham";
-				font-size: 13px;
-				text-align: center;
-				}
-				
-				.select{
-				background-color:#C9C9C9;
-				}
-				
-				#fermer-invitation1-fc{
-				padding:5px;
-				color: #808080;
-				background-color: black;
-				font-family: "bebasneue-webfont";
-				font-size: 16px;
-				margin-left: 100px;
-				margin-top: -38px;
-				cursor: pointer;
-				}
-				
-				.act{
-				background-color:#808080;
-				color: black;
-				font-family: "bebasneue-webfont";
-				font-size: 16px;
-				margin-left: 10px;
-				}
-			}
-			
-			
-			.invitation-fermer4-fc{
-				.texte{
-				padding-top: 5px;
-				font-family: "gotham";
-				font-size: 13px;
-				text-align: center;
-				}
-				
-				.select{
-				background-color:#C9C9C9;
-				}
-				
-				#fermer-invitation4-fc{
-				padding:5px;
-				color: #808080;
-				background-color: black;
-				font-family: "bebasneue-webfont";
-				font-size: 16px;
-				margin-left: 100px;
-				margin-top: -38px;
-				cursor: pointer;
-				}
-				
-				.act{
-				background-color:#808080;
-				color: black;
-				font-family: "bebasneue-webfont";
-				font-size: 16px;
-				margin-left: 10px;
-				}
-			}
-			.second_grade{
-				margin-top: 10px;
-				width: 140px;
-				height:30px;
-				background-color: #808080;
-				font-family: "bebasneeue-webfont";
-				font-size: 24px;
-				color: white;
-				
-					.texte{
-					text-align: center;
-					padding-top:5px;
-					}
-			}
-		}
-		
-		
-		#fc-milieu{
-			margin-left:2px;
-			width:400px;
-			#fc-image-superieure{
-				height:254px;
-				margin: 15px 0px 15px 0px;
-				img { width: 420px; height:254px;}
-
-				.image{
-				}
-
-				.image-sign{
-					img { width: 50px; height:49px;}
-					margin-top:-145px;
-					margin-left: 175px;
-				}
-
-			}
-			
-			#fc-milieu-1{
-				font-family:"gotham";
-				font-size: 25px;
-				font-color: black;
-				line-height: 25px;
-				margin-left: 0px;
-				margin-right:0px;
-
-
-
-					.title{
-					padding-top:5px;
-					padding-right: 10px;
-					text-align: left;
-					}
-				}
-
-				#fc-milieu-4{
-				margin-left: 0px;
-				margin-right:0px;
-				margin-top:15px;
-				font-family : "gotham";
-				font-size : 18px;
-				color: white;
-
-				li{
-				margin-right: 5px;
-				display : inline-block;
-				}
-
-				}
-				
-				#fc-milieu-2{
-				margin-top: 15px;
-				font-family: "georgia";
-				font-style: italic;
-				font-size: 14px;
-				margin-left: 0px;
-				margin-right:0px;
-
-					.content{
-					text-align: left;
-					}
-				}
-				#fc-milieu-3{
-				margin-left: 0px;
-				margin-right:0px;
-					margin-top: 15px;
-					padding-bottom: 10px;
-					border-bottom: 9px solid white;
-
-						a:hover{
-						color:#000000;
-						}
-
-					.pour-first{
-					 	float: left;
-						padding: 7px 15px 10px 15px;
-						font-family:"gotham";
-						font-size:18px;
-						color: white;
-						background-color:#808080;
-					}
-
-					.pour-first1{
-					 	float: left;
-						padding: 7px 15px 10px 15px;
-						font-family:"gotham";
-						font-size:18px;
-						color: white;
-						background-color:#AAD0FF;
-					}
-
-					.rapport-gauche{
-						float: left;
-						padding: 7px 5px 10px 5px;
-						font-family:"georgia";
-						font-size:18px;
-						font-style:italic;
-						font-weight: bold;
-						background-color:#FFF;
-						color: black;
-					}
-
-					.pour-second{
-					  float: right;
-						padding: 7px 15px 10px 15px;
-						font-family:"gotham";
-						font-size:18px;
-						color: white;
-						background-color:#808080;			
-					}
-
-					.pour-second2{
-					  float: right;
-						padding: 7px 15px 10px 15px;
-						font-family:"gotham";
-						font-size:18px;
-						color: white;
-						background-color:#FF6969;			
-					}
-
-					.rapport-droite{
-						float: right;
-						padding: 7px 5px 10px 5px;
-						font-family:"georgia";
-						font-size:18px;
-						font-style:italic;
-						font-weight: bold;
-						background-color:#FFF;
-						color: black;		
-					}
-
-					}
-
-
-				#fc-milieu-5{
-					font-family:"bebasneue-webfont";
-					font-size:28px;
-					margin-left: 0px;
-					margin-right:0px;
-					margin-bottom:15px;
-
-					.stat1{
-						.image{
-						padding-bottom:5px;
-						margin-left:5px;
-						margin-right: 10px;
-						}
-					}
-					.stat2{
-					margin-left: 5px;
-					margin-top: 0px;
-					}
-				}
-		}
-	}
+ $("#fermer-invitation1-fc").click ->
+	    $(this).parent().parent().hide().siblings(".second_user").show()
 	
-	
-	#position-aleatoire{
-		background-color:#808080;
-		margin-left:400px;
-		font-family: "bebasneue-webfont";
-		font-size: 24px;
-		width: 270px;
-		margin-bottom: 30px;
-		
-		.numero{
-		text-align: center;
-		padding-top:5px;
-		padding-bottom: 5px;
-		
-		a:hover{
-		color: white;
-		}
-		}
-	}
-	
-	#pousse-gauche{
-		margin-left:-12px;
-	}
-	
-	#pousse-gauche2{
-		margin-left:-32px;
-	}
-	
-	#follow{
-	margin-top:-383px;
-	margin-left:910px;
-	height:  24px;
-	width: 90px;
-	background-color: #808080;
-	
-	.texte{
-		font-family: "gotham";
-		font-weight: bold;
-		font-size: 16px;
-		color: #FFF;
-		padding-left: 8px;
-		padding-top:2px;
-		
-		.texte:hover{
-			color: black;
-		}
-	}
-	
-	.texte2{
-		font-family: "gotham";
-		font-weight: bold;
-		font-size: 16px;
-		color: #FFF;
-		padding-left: 12px;
-		padding-top:2px;
-		
-		.texte:hover{
-			color: black;
-		}
-	}
-	.arrow-left{
-		margin-top:-20px;
-		padding-left: 78px;
-	 	width: 0; 
-	 	height: 0; 
-	 	border-top: 12px solid transparent;
-	 	border-bottom: 12px solid transparent; 
-	 	border-right:12px solid white;
-	}
-	
-	}
-	
-   	#catcat{
-	margin-top:-343px;
-	margin-left:910px;
-	height:65px;
-	width:90px;
-	background-color:#AAD0FF;
-	
-	 .arrow-left{
-		padding-left:58px;
-	 	width: 0; 
-	 	height: 0; 
-	 	border-top: 32px solid transparent;
-	 	border-bottom: 34px solid transparent; 
-	 	border-right:32px solid white;
-	 }
-	.image{
-	margin-left:10px;
-	margin-top:-55px;
-	}
-	}
-	
-	#start{
-
-		font-family:"bebasneue-webfont";
-		font-size:28px;
-		margin-left:535px;
-		margin-top:50px;
-		margin-bottom: 0px;
-		width:240px;
-		color:black;
-	}
-	
-	.tour-gauche{
-	background-color:#AAD0FF;
-	margin-top:20px;
-	width: 534px;
-	min-height:60px;
-	margin-left:150px;
-	
-	.image{
-		padding: 3px 3px 3px 3px;
-		img { width: 50px; height:50px;}
-		
-		.name{
-		font-family:"gotham";
-		font-size:18px;
-		color:#000000;
-		}
-	}
-	}
-	
-	.tour-droite{
-	background-color:#FF7575;
-	margin-top:20px;
-	width: 534px;
-	min-height:60px;
-	margin-left:376px;
-	
-	.image{
-		padding: 3px 3px 3px 3px;
-		img { width: 50px; height:50px;}
-		
-		.name{
-		font-family:"gotham";
-		font-size:18px;
-		color:#000000;
-		}
-	}
-	}	
-}
-
