--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -36,11 +36,45 @@ text-align: center;
 	margin-left:20px;
 	width: 260px;
 	height: 358px;
-	background-color: #CCC;
+	background-color: #FFF;
+	
+		#badge-home{
+		margin-top: 15px;
+		margin-left: - 35px;
+		}
+		
+		#stats-profil{
+			margin-left: 40px;
+			width: 170px;
+			margin-bottom: 5px;
+			margin-top: 5px;
+			font-family: "gotham";
+			font-size: 16px;
+			border-bottom: 1px solid black;
+
+			.texte5{
+				padding-top: 8px;
+				margin-bottom: 3px;
+				width: 50px;
+				height: 22px;
+				text-align: center;
+				color: black;
+				font-family: "bebasneue-webfont";
+				font-size: 27px;
+			}
+
+			.texte2{
+				margin-left: 60px;
+				margin-top: -30px;
+				margin-bottom: 15px;
+			}
+		}
+		
+		
 	}
 	
 	#video_3{	
-	width: 550px;
+	width: 565px;
 	height: 358px;
 	margin-top: - 358px;
 	margin-left: 290px;
