--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -6,7 +6,7 @@
 		
 		<div class= 'row' id="container-activ">
 			<div>
-				<%= render "profile_badge" %>	
+				<%= render "profile_badge", user: @user %>	
 			</div>
 			<div class="span7" id="container-activ2">
 				
